# libxml

./: .gitignore  CMakeLists.txt  CMakePresets.json
examples/: example01.xml  main.c  utf8_test.c
include/: libxml.h  xml_allocator.h  xml_parse.h  xml_parser.h  xml_string.h  xml_type.h  xml_unicode.h  xmlalloc.h  xmlencoding.h  xmlentity.h  xmlnode.h  xmlparse.h  xmlparser.h  xmlstring.h  xmltype.h  xmlunicode.h
src/: _libxml.h  _xml_parser.h  libxml.c  xml_parse.c  xml_parser.c  xml_string.c  xml_unicode.c  xmlalloc.c  xmlencoding.c  xmlnode.c  xmlparse.c  xmlparsecmd.c  xmlparser.c  xmlstring.c
tests/: CMakeLists.txt  example01.xml  main.c
tests/alloc/: CMakeLists.txt  std_allocator.c  std_debug_allocator.c
